# Kaggle

./: .gitignore  README.md  setup_kaggle.py
insurance/: .gitignore  README.md  __init__.py  main.py  pyproject.toml  setup.py  train_model.py  train_model_v2.py  train_model_v3.py  train_model_v4.py
insurance/common/: explore_data.py  feature_engineering.py  logging.py  preprocessing.py  training.py  utils.py
insurance/competition/: data.md  download_data.py  submission.md
insurance/models/: __init__.py  catboost_model.py  deep_models.py  lgbm_model.py  sklearn_models.py  xgb_model.py
