[project]
name = "insurance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.5",
    "lightgbm>=4.5.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "xgboost>=2.1.3",
]
